--- a/index.html
+++ b/index.html
@@ -9,13 +9,125 @@
 </head>
 <body>
     <div class="container">
-        <nav>
-            <div class="nav-items">
-
+        <div class="top">
+            <div class="nav-top">
+                <div class="nav-top_ru">
+                <div>
+                    <a href="" class="ru">RU</a>
+                    <a href="" class="uzb">UZB</a>
+                </div>
             </div>
-        </nav>
-        <footer>
+            </div>
+            <nav>
+                <div class="nav-items">
+                    <div class="nav-left">
+                        <a href="#">MILANDI</a>
+                    </div>
+                    <div class="nav-center">
+                        <ul>
+                            <li>
+                                <a href="">Главная</a>
+                            </li>
+                            <li>
+                                <a href="">О нас</a>
+                            </li>
+                            <li>
+                                <a href="">Категории</a>
+                            </li>
+                            <li>
+                                <a href="">Сотрудничество</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="nav-right">
+                        <a href="" class="btn-link">
+                            <button class="sign">Войти</button>
+                        </a>
+                        <a href="" class="btn-link">
+                            <button class="sign-up">Зарегистрироваться</button>
+                        </a>
+                        <a href="">
+                            <img class="right-img" src="./img/ic_cart.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        
+        <br><br><br><br><br><br><br><br><br><br>
 
+        <footer>
+            <div class="footer-item">
+                <div class="footer-item_1">
+                    <h3>про imperia</h3>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipiscing elit.
+                        Eget pretium aenean dignissim 
+                        sit cursus dictumst adipiscing nunc.
+                    </p>
+                    <img src="./img/gerb.png" alt="">
+                </div>
+                <div class="footer-item_2">
+                    <h3>контакты</h3>
+                    <ul>
+                        <li>
+                            <a href="tel:+998909587887">+998 90 958 78 87</a>
+                        </li>
+                        <li>
+                            <a href="mailto:support@fonon.uz">support@fonon.uz</a>
+                        </li>
+                    </ul>
+                    <h3 style="margin-top:38px;">рабочее время</h3>
+                    <ul>
+                        <li>
+                            <a href="">По будням 9:00 to 18:00</a>
+                        </li>
+                        <li>
+                            <a href="">В выходные 11:00 to 18:00</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-item_3">
+                    <h3>Меню</h3>
+                    <ul>
+                        <li>
+                            <a href="">Главная</a>
+                        </li>
+                        <li>
+                            <a href="">О нас</a>
+                        </li>
+                        <li>
+                            <a href="">Категории</a>
+                        </li>
+                        <li>
+                            <a href="">Сотрудничество</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-item_4">
+                    <h3>категории</h3>
+                    <ul>
+                        <li>
+                            <a href="">Женская одежда</a>
+                        </li>
+                        <li>
+                            <a href="">Мужская одежда</a>
+                        </li>
+                        <li>
+                            <a href="">Детская одежда</a>
+                        </li>
+                        <li>
+                            <a href="">Обувь</a>
+                        </li>
+                        <li>
+                            <a href="">Сумки</a>
+                        </li>
+                        <li>
+                            <a href="">Аксесуары</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
