--- a/index.html
+++ b/index.html
@@ -53,8 +53,110 @@
                 </div>
             </nav>
         </div>
-        
-        <br><br><br><br><br><br><br><br><br><br>
+        <header>
+            <div class="header-main">
+                <div class="header-main_item">
+                    <h1>Быстрый и удобный шоппинг, не выходя из дома.</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Convallis lectus odio vitae, duis nec ut velit, fermentum. Diam sollicitudin arcu euismod morbi. Adipiscing bibendum elementum, fermentum amet quis erat.</p>
+                    <ul>
+                        <li>
+                            <a href="#">Все товары</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <img src="./img/header-img (2).png" alt="">
+        </header>
+        <div class="group-151">
+            <div class="gr-151-item">
+                <h1>Наши преимущества</h1>
+                <div class="gr-151_box">
+                    <div class="box-151">
+                        <img src="./img/ic_stars.png" alt="">
+                        <p>Лучший сервис</p>
+                    </div>
+                    <div class="box-151">
+                        <img src="./img/ic_truck.png" alt="">
+                        <p>Экспресс доставка </p>
+                    </div>
+                    <div class="box-151">
+                        <img src="./img/ic_like.png" alt="">
+                        <p>Лучшее качество в стране</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="group-164">
+            <div class="gr-164-item">
+                <h1>Лучшие товары</h1>
+                <div class="gr-164-boxes">
+                    <div class="box-164">
+                        <img src="./img/img-164-1.png" alt="">
+                        <h1 class="h1">Lorem ipsum dolor sit  amet</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                        <div class="price">
+                            <div class="stars">
+                                <img src="./img/stars-box.png" alt="">
+                            </div>
+                            <div class="price-custom">
+                                <p>855 у.е.</p>
+                            </div>
+                        </div>
+                        <a href="">
+                            <button>Добавить в корзину</button>
+                        </a>
+                    </div>
+                    <div class="box-164">
+                        <img src="./img/img-164-2.png" alt="">
+                        <h1 class="h1">Lorem ipsum dolor sit  amet</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                        <div class="price">
+                            <div class="stars">
+                                <img src="./img/stars-box.png" alt="">
+                            </div>
+                            <div class="price-custom">
+                                <p>855 у.е.</p>
+                            </div>
+                        </div>
+                        <a href="">
+                            <button>Добавить в корзину</button>
+                        </a>
+                    </div>
+                    <div class="box-164">
+                        <img src="./img/img-164-3.png" alt="">
+                        <h1 class="h1">Lorem ipsum dolor sit amet</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                        <div class="price">
+                            <div class="stars">
+                                <img src="./img/stars-box.png" alt="">
+                            </div>
+                            <div class="price-custom">
+                                <p>855 у.е.</p>
+                            </div>
+                        </div>
+                        <a href="">
+                            <button>Добавить в корзину</button>
+                        </a>
+                    </div>
+                    <div class="box-164">
+                        <img src="./img/img-164-4.png" alt="">
+                        <h1 class="h1">Lorem ipsum dolor sit amet</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                        <div class="price">
+                            <div class="stars">
+                                <img src="./img/stars-box.png" alt="">
+                            </div>
+                            <div class="price-custom">
+                                <p>855 у.е.</p>
+                            </div>
+                        </div>
+                        <a href="">
+                            <button>Добавить в корзину</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <footer>
             <div class="footer-item">
