--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                             <a href="#">Все товары</a>
                         </li>
                     </ul>
+                    <img src="./img/header-img (2).png" alt="">
                 </div>
             </div>
-            <img src="./img/header-img (2).png" alt="">
         </header>
         <div class="group-151">
             <div class="gr-151-item">
@@ -157,6 +157,127 @@
                 </div>
             </div>
         </div>
+        <div class="group-143">
+            <h1>Категории</h1>
+            <div class="gr-143-item">
+                <div class="gr-143-box">
+                <img src="./img/gr-143-1.png" alt="">
+                </div>
+                <div class="gr-143-box">
+                    <img src="./img/gr-143-2.png" alt="">
+                </div>
+                <div class="gr-143-box">
+                    <img src="./img/gr-143-3.png" alt="">
+                </div>
+                <div class="gr-143-box">
+                    <img src="./img/gr-143-4.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="group-144">
+            <div class="gr-144-box">
+                <div class="gr-144-left">
+                    <img src="./img/iPhone 12 Pro mockup 1.png" alt="">
+                </div>
+                <div class="gr-144-right">
+                    <h1>Скачай приложение и получай призы каждый день</h1>
+                    <p>Скачав наш приложение вы получаете возможность играть в призовые игры каждый день и выигровать разного рода подарки для себя.
+                        В нашем приложении призовые игры проходят аблолютно каждый день и всё это совершенно бесплатно.</p>
+                        <span>
+                            <a href=""><img src="./img/available-on-the-app-store-1 1.png" alt=""></a>
+                            <a href=""><img src="./img/google-play-download-android-app 1.png" alt=""></a>
+                        </span>
+                    </div>
+            </div>
+        </div>
+        <div class="group-164">
+            <div class="gr-164-item">
+                <h1>Лучшие товары</h1>
+                <div class="gr-164-boxes">
+                    <div class="box-164">
+                        <img src="./img/img-164-4.png" alt="">
+                        <h1 class="h1">Lorem ipsum dolor sit  amet</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                        <div class="price">
+                            <div class="stars">
+                                <img src="./img/stars-box.png" alt="">
+                            </div>
+                            <div class="price-custom">
+                                <p>855 у.е.</p>
+                            </div>
+                        </div>
+                        <a href="">
+                            <button>Добавить в корзину</button>
+                        </a>
+                    </div>
+                    <div class="box-164">
+                        <img src="./img/img-164-1.png" alt="">
+                        <h1 class="h1">Lorem ipsum dolor sit  amet</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                        <div class="price">
+                            <div class="stars">
+                                <img src="./img/stars-box.png" alt="">
+                            </div>
+                            <div class="price-custom">
+                                <p>855 у.е.</p>
+                            </div>
+                        </div>
+                        <a href="">
+                            <button>Добавить в корзину</button>
+                        </a>
+                    </div>
+                    <div class="box-164">
+                        <img src="./img/img-164-2.png" alt="">
+                        <h1 class="h1">Lorem ipsum dolor sit amet</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                        <div class="price">
+                            <div class="stars">
+                                <img src="./img/stars-box.png" alt="">
+                            </div>
+                            <div class="price-custom">
+                                <p>855 у.е.</p>
+                            </div>
+                        </div>
+                        <a href="">
+                            <button>Добавить в корзину</button>
+                        </a>
+                    </div>
+                    <div class="box-164">
+                        <img src="./img/img-164-3.png" alt="">
+                        <h1 class="h1">Lorem ipsum dolor sit amet</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                        <div class="price">
+                            <div class="stars">
+                                <img src="./img/stars-box.png" alt="">
+                            </div>
+                            <div class="price-custom">
+                                <p>855 у.е.</p>
+                            </div>
+                        </div>
+                        <a href="">
+                            <button>Добавить в корзину</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="group-146">
+            <div class="gr-146-item">
+                <div class="gr-146-left">
+                    <img src="./img/img-146.png" alt="">
+                </div>
+                <div class="gr-146-right">
+                    <h1>Создай свой лук на все случаи жизни в “Imperia”</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam sollicitudin a cursus in. Vel sit donec semper magna dignissim. Amet, mi justo at metus vestibulum sollicitudin lacus. Nunc vel egestas fermentum pellentesque sed vitae vel.</p>
+                    <a href="">
+                        <button>начать покупки</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="group-145">
+            <h1>Скидка <span>30%</span> на первую покупку обслютно для всех</h1>
+        </div>
 
         <footer>
             <div class="footer-item">
@@ -196,7 +317,7 @@
                             <a href="">Главная</a>
                         </li>
                         <li>
-                            <a href="">О нас</a>
+                            <a href="./pages/second.html">Second</a>
                         </li>
                         <li>
                             <a href="">Категории</a>
