--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <div class="nav-center">
                         <ul>
                             <li>
-                                <a href="">Главная</a>
+                                <a href="./index.html">Главная</a>
                             </li>
                             <li>
-                                <a href="">О нас</a>
+                                <a href="./pages/second.html">О нас</a>
                             </li>
                             <li>
                                 <a href="">Категории</a>
@@ -314,10 +314,10 @@
                     <h3>Меню</h3>
                     <ul>
                         <li>
-                            <a href="">Главная</a>
+                            <a href="./index.html">Главная</a>
                         </li>
                         <li>
-                            <a href="./pages/second.html">Second</a>
+                            <a href="./pages/second.html">О нас</a>
                         </li>
                         <li>
                             <a href="">Категории</a>
