--- a/pages/second.html
+++ b/pages/second.html
@@ -27,10 +27,10 @@
                     <div class="nav-center">
                         <ul>
                             <li>
-                                <a href="">Главная</a>
+                                <a href="../index.html">Главная</a>
                             </li>
                             <li>
-                                <a href="">О нас</a>
+                                <a href="./second.html">О нас</a>
                             </li>
                             <li>
                                 <a href="">Категории</a>
@@ -94,13 +94,91 @@
                     <p>Скачав наш приложение вы получаете возможность играть в призовые игры каждый день и выигровать разного рода подарки для себя.
                         В нашем приложении призовые игры проходят аблолютно каждый день и всё это совершенно бесплатно.</p>
                         <span>
-                            <a href=""><img src="./img/available-on-the-app-store-1 1.png" alt=""></a>
-                            <a href=""><img src="./img/google-play-download-android-app 1.png" alt=""></a>
+                            <a href=""><img src="../img/available-on-the-app-store-1 1.png" alt=""></a>
+                            <a href=""><img src="../img/google-play-download-android-app 1.png" alt=""></a>
                         </span>
                     </div>
             </div>
         </div>
-
+        <div class="map-section">
+            <div class="map-item">
+                <div class="map-left">
+                    <img src="../img/map.png" alt="">
+                </div>
+                <div class="map-right">
+                    <h1>Работаем по всему миру.</h1>
+                    <div class="address">
+                        <div class="address-1">
+                            <ul>
+                                <li>
+                                    <p>Bali</p>
+                                </li>
+                                <li>
+                                    508 Bridle Avenue
+                                </li>
+                                <li>
+                                    Newnan, GA
+                                </li>
+                                <li>
+                                    30263
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="address-1">
+                            <ul>
+                                <li>
+                                    <p>London</p>
+                                </li>
+                                <li>
+                                    508 Bridle Avenue
+                                </li>
+                                <li>
+                                    Newnan, GA
+                                </li>
+                                <li>
+                                    30263
+                                </li>
+                            </ul>
+                        </div>
+                        <div style="margin-top: 32px;" class="address">
+                            <div class="address-1">
+                                <ul>
+                                    <li>
+                                        <p>Moscow</p>
+                                    </li>
+                                    <li>
+                                        508 Bridle Avenue
+                                    </li>
+                                    <li>
+                                        Newnan, GA
+                                    </li>
+                                    <li>
+                                        30263
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="address-1">
+                                <ul>
+                                    <li>
+                                        <p>Prague</p>
+                                    </li>
+                                    <li>
+                                        508 Bridle Avenue
+                                    </li>
+                                    <li>
+                                        Newnan, GA
+                                    </li>
+                                    <li>
+                                        30263
+                                    </li>
+                                </ul>
+                            </div>
+                            
+                        </div>    
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer>
             <div class="footer-item">
                 <div class="footer-item_1">
@@ -139,7 +217,7 @@
                             <a href="">Главная</a>
                         </li>
                         <li>
-                            <a href="./pages/second.html">second</a>
+                            <a href="./second.html">О нас</a>
                         </li>
                         <li>
                             <a href="">Категории</a>
